# libfmemopen

./: CMakeLists.txt  clean_build.sh
include/: CMakeLists.txt
src/: CMakeLists.txt  fmemopen.c
