set(LIBRARY_NAME ${CMAKE_PROJECT_NAME})

set(LIB_HEADERS
    "${CMAKE_CURRENT_BINARY_DIR}../include/${LIBRARY_NAME}/${LIBRARY_NAME}.h")

set(LIB_SOURCES
    "${LIBRARY_NAME}.c")
add_library(${LIBRARY_NAME} SHARED ${LIB_SOURCES})

set_target_properties(${LIBRARY_NAME} PROPERTIES
    VERSION ${VERSION}
    FRAMEWORK FALSE
    PUBLIC_HEADER "${LIB_HEADERS}")

install(TARGETS ${LIBRARY_NAME}
    EXPORT ${PROJECT_NAME}Targets
    ARCHIVE DESTINATION lib COMPONENT libs
    LIBRARY DESTINATION lib COMPONENT libs
    PUBLIC_HEADER DESTINATION include/${PROJECT_NAME} COMPONENT devel
    INCLUDES DESTINATION include)
